# rgd

./: .bumpversion.cfg  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: conf.py  constants.rst  enrichment.rst  index.rst  manager.rst
src/bio2bel_rgd/: __init__.py  constants.py  enrich.py  manager.py  models.py  orthology.py  parsers.py
tests/: cases.py  constants.py  test_orthology.py  test_populate.py
tests/resources/: test.GENES_RAT.txt
